[package]
name = "hltv-rs"
version = "0.0.1"
authors = ["Andrey Kononov <flowneee3@gmail.com>"]
edition = "2018"

[dependencies]
attohttpc = { version = "0.16.0", default-features = false, features = ["compress", "tls-rustls"], optional = true }
cssparser = "0.27.2"
scraper = "0.12.0"
thiserror = "1.0"

[dev-dependencies]
lazy_static = "1.4.0"
parking_lot = "0.11.0"
rand = "0.7.0"

[features]
default = ["attohttpc_client"]

attohttpc_client = ["attohttpc"]
